<resources>
    <string name="app_name">RaceTracker</string>
    <string name="mainmenu_viewer" translatable="false">Regarder une course</string>
    <string name="mainmenu_management">Gérer les courses</string>
    <string name="managemenu_create_race">Créer une nouvelle course</string>
    <string name="option_configure">Options</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_view_race_google">Race Tracker</string>
    <string name="title_activity_maps">Map</string>

    <string name="pref_header_general">Général</string>
    <string name="managemenu_new_competitor">Créer un participant</string>
    <string name="managemenu_race_registration">Inscriptions</string>
    <string name="managemenu_race_start">Début/Fin de course</string>
    <string name="managemenu_race_start_button_start">Débuter la course</string>
    <string name="managemenu_race_start_button_end">Terminer la course</string>

    <string name="create_new_race_default">Nom de la course</string>
    <string name="createnewrace_set_date">Date</string>
    <string name="createnewrace_set_time">Heure de départ</string>
    <string name="createnewrace_set_name">Nom de la course</string>

    <string name="createnewrace_set_location">Emplacement</string>
    <string name="createnewrace_create">Créer</string>
    <string name="createnewrace_pick_location">Séléctionner l\'emplacement</string>
    <string name="createnewrace_set_course">Parcours</string>

    <string name="db_user_key">db_user</string>
    <string name="pref_db_user">Utilisateur</string>
    <string name="db_default_user">pi</string>

    <string name="db_pwd_key">db_pwd</string>
    <string name="pref_db_pwd">Mot de passe</string>
    <string name="db_default_pwd">heig</string>

    <string name="db_server_key">db_server</string>
    <string name="pref_db_server">Adresse serveur</string>
    <string name="db_default_server">192.168.4.1</string>

    <string name="leave_trail_key">leave_trail</string>
    <string name="pref_leave_trail">Afficher tous les points</string>
    <string name="default_leave_trail">false</string>

    <string name="replay_scale_key">replay_scale</string>
    <string name="pref_replay_scale">Echelle de temps pour le mode replay</string>
    <string name="default_replay_scale">1</string>

    <string name="createnewcompetitor_first_name">Prénom</string>
    <string name="createnewcompetitor_last_name">Nom</string>
    <string name="createnewcompetitor_create">Créer nouveau participant</string>
    <string name="registration_add_new">Ajouter une inscription</string>
    <string name="validation">Valider</string>
    <string name="edit_registration_bib">Numéro de dossard</string>
    <string name="edit_registration_sensor">ID Capteur</string>
</resources>
